# cook

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  recipe.py
cook/: __init__.py  build.py  build_server.py  build_step.py  cli.py  configuration.py  cook.py  exception.py  executors.py  logger.py  main.py  process.py  project.py  receipe.py  recipe.py  rsync.py  runner.py  settings.py  sync.py  watchers.py
cook/template/: __init__.py  recipe_template.py  recipe_template_1.py  recipe_template_2.py  recipe_template_3.py  recipe_template_4.py
docs/source/: conf.py  index.rst  quickstart.rst  recipe.rst  usage.rst
example/: receipe.py  recipe.py
example/my_project/: my_script.py
example/my_project_source/: my_script.py
examples/advanced/: recipe.py
examples/basic/: recipe.py
examples/user_args/: recipe.py
test/: test_configuration.py  test_executor.py  test_executors.py  test_process.py  test_recipe_loader.py  test_rsync.py  test_sync.py
