[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cook_builder"
version = "0.1.0"
dependencies = [
  "fabric==3.2.2",
  "rich==13.7.1",
]
requires-python = ">=3.10"
authors = [
  { name="Seweryn Rusecki" },
]
description = "Build script aggregator and remote executor"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/serweryn617/cook"
Issues = "https://github.com/serweryn617/cook/issues"

[project.scripts]
cook = "cook.cli:cli"

[tool.black]
line-length = 140
target-version = ['py310']
skip-string-normalization = true
extend-exclude = 'example/recipe.py'
